Añadido visor de pdf
Añadida libreria necesaria, asi como una actividad que lo muestra.
Tambien se han añadido los pdf en "assets" y se ha corregido el archivo de la base de datos (algunas url estaban erroneas).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activities.ChoiceActivity" />
-        <activity android:name=".Activities.RecetasActivity"></activity>
+        <activity android:name=".Activities.RecetasActivity" />
+        <activity android:name=".Activities.VisorPdfActivity"></activity>
     </application>
 
 </manifest>
