Añadida Actividad para Guardar Recetas
Añadido todo en la actividad, solo falta añadir la creación de Pdf y la insercción en la base de datos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,10 @@
         </activity>
         <activity android:name=".Activities.ChoiceActivity" />
         <activity android:name=".Activities.RecetasActivity" />
-        <activity android:name=".Activities.VisorPdfActivity"></activity>
+        <activity android:name=".Activities.VisorPdfActivity" />
+        <activity
+            android:name=".Activities.AgregarRecetaActivity"
+            android:windowSoftInputMode="stateHidden"/>
     </application>
 
 </manifest>
