--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.1'
+    implementation 'com.itextpdf:itextg:5.5.10'
 }
