--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.1'
     implementation 'com.itextpdf:itextg:5.5.10'
     implementation "com.airbnb.android:lottie:2.6.0"
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
