--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Activities.NavigationActivity"></activity>
         <activity android:name=".Activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,9 +21,7 @@
         <activity android:name=".Activities.VisorPdfActivity" />
         <activity
             android:name=".Activities.AgregarRecetaActivity"
-            android:windowSoftInputMode="stateHidden"/>
-
-
+            android:windowSoftInputMode="stateHidden" />
     </application>
 
 </manifest>
